[tool.poetry]
name = "cgmlstsearch"
version = "0.1.0"
description = ""
authors = ["Finn Gruwier Larsen <finn@gruwier.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.4"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
