[tool.poetry]
name = "cgmlstsearch"
version = "0.1.0"
description = ""
authors = ["Finn Gruwier Larsen <finn@gruwier.dk>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.22.0"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
